ensure center alignment for metadata

--- a/extension/src/popup/components/account/CollectibleDetail/styles.scss
+++ b/extension/src/popup/components/account/CollectibleDetail/styles.scss
@@ -78,15 +78,17 @@
     background: var(--sds-clr-gray-02);
     border-radius: pxToRem(16px);
     display: flex;
+    justify-content: center;
     flex-direction: column;
     padding: pxToRem(12px) pxToRem(24px);
     width: pxToRem(134px);
+    text-align: center;
   }
 
   &__attribute__trait {
     color: var(--sds-clr-gray-11);
     font-size: pxToRem(12px);
-    font-weight: var(--sds-fw-medium);
+    font-weight: var(--sds-fw-semi-bold);
     line-height: pxToRem(18px);
     max-width: 100%;
     overflow: scroll;
